--- a/capstone/sass/_variables.scss
+++ b/capstone/sass/_variables.scss
@@ -1,7 +1,7 @@
 $gunmetal: #30373D;
-$teal: #00ADD2;
-$pink: #C0519E;
-$coral: #FF7546;
+$teal: #007994;
+$pink: #B84294;
+$coral: #D63600;
 
 $bodyFont: 'Lato', sans-serif;
 $lightWeight: 300;
